# dice-reroute-circuits

./: .gitignore  LICENSE  README.md  pyproject.toml  render.yaml  requirements.txt  stats.js
.kiro/specs/dice-stats-report/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: structure.md  tech.md  testing.md
.kiro/steering/drc_front/: drc_front_product.md  drc_front_tech.md
.kiro/steering/drc_stat_engine/: drc_stat_engine_api.md  drc_stat_engine_product.md  drc_stat_engine_structure.md  drc_stat_engine_tech.md  drc_stat_engine_testing.md
docs/: rules_glossary.md
drc_front/: README.md  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.json  vite.config.ts
drc_front/public/doc/: about.md  changelog.md
drc_front/scripts/: generate-about.mjs
drc_front/src/: App.vue
drc_front/src/__tests__/: project-versioning.test.ts
drc_front/src/api/: client.ts
drc_front/src/assets/: main.css
drc_front/src/components/: AboutModal.vue  AddAttackEffectForm.vue  AddDefenseEffectForm.vue  AddOperationForm.vue  AttackEffectCard.vue  ResultsPanel.vue  (+10 more)
drc_stat_engine/api/: app.py  routes.py
drc_stat_engine/scripts/: README.md  defense_study.py  rep_arcs_bcc.csv
drc_stat_engine/stats/: dice.py  dice_maths_combinatories.py  dice_models.py  dice_monte_carlo.py  report.py  report_engine.py  strategies.py
stats/: dice.py  profiles.py  report.py
tests/dice-stats-report/: test_dice_stats_report_t2_pipeline.py  test_dice_stats_report_t4_checkpoint.py  test_dice_stats_report_t5_strategy.py  test_dice_stats_report_t6_format.py
(+149 files in other folders)
