[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "drc_stat_engine"
version = "0.3.0"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["drc_stat_engine*"]

[tool.pytest.ini_options]
testpaths = ["drc_stat_engine/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
